--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+html {
+  background-color: #009688; }
+
 .jumbotron {
-  background-color: #009688;
-  height: 600px; }
+  height: 100%; }
   .jumbotron .divProfil {
     text-align: center;
-    padding-top: 100px; }
+    padding-top: 60px; }
     .jumbotron .divProfil .imageProfil {
       height: 250px;
       width: 250px;
@@ -22,5 +24,12 @@
       margin: 0;
       font-size: 28px;
       font-style: italic; }
+  .jumbotron .divVisite {
+    margin-top: 50px; }
+    .jumbotron .divVisite .startVisite {
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #FEFEFE;
+      display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
